# simple_library_example

./: .gitignore  CMakeLists.txt  LICENSE  README.md  lib.c  lib.h  main.cpp  solution.cpp
wasm_prebuilt/: lib.wasm  lib_wasm.c  lib_wasm.h
